
FROM gridBase_0.4-5 TO gridBase_0.4-6
-------------------------------------

1.  Changed to using Imports from 'grid' in NAMESPACE rather than
    just Depending on 'grid'.  Ditto for 'graphics'.
    This allows other packages to Import 'gridBase' without
    having to attach 'gridBase' to the search path.
    (Thanks to Martin Maechler for the suggestion and patches)
    

FROM gridBase_0.4 TO gridBase_0.4-1
-----------------------------------

1.  Updated demo(gridBase) 
    Was using very old gridOMI() behaviour which actually set par(omi)
    rather than just returning a value to use in a call to par()