@@ -1,13 +1,14 @@
 Package: gridBase
 Title: Integration of base and grid graphics
-Version: 0.4-6
+Version: 0.4-7
 Author: Paul Murrell
-Depends: R (>= 2.3.0), graphics, grid
+Depends: R (>= 2.3.0)
 Imports: graphics, grid
 Suggests: lattice
 Description: Integration of base and grid graphics
 Maintainer: Paul Murrell <paul@stat.auckland.ac.nz>
 License: GPL
-Packaged: 2012-12-04 19:23:21 UTC; EC\pmur002
+Packaged: 2014-02-24 01:35:23 UTC; EC\pmur002
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2012-12-04 20:47:58
+Date/Publication: 2014-02-24 07:20:37
